# world

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package-lock.json  package.json  vcpkg.json
server/: main.cpp  test.cpp
server/test/: test.h
server/world/: geo.h  life.h  object.h  world.h
